# -W-B-Inference-Hobby-Center

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements-docker.txt  requirements.txt  run.sh
backend/: auth.py  config.py  database.py  main.py
backend/api/: auth_routes.py  chat_routes.py  model_routes.py  ollama_routes.py  openai_routes.py  system_routes.py  unified_routes.py
backend/services/: download_manager.py  hardware_monitor.py  inference_engine.py  llama_engine.py  model_manager.py  ollama_engine.py  unified_engine.py
docs/: INSTALL_ROCM.md
frontend/: index.html
ui/: app.py
